--- a/src/App.css
+++ b/src/App.css
@@ -11,25 +11,26 @@
 }
 
 .footer{
-    background-color: #D1C4E9;
+    background-color: #cee4e3;
     margin:0px auto;
     padding: 20px 0px 20px 0px;
+    color:#626e6d;
 }
 .jumbotron {
     padding:70px 30px 70px 30px;
     margin:0px auto;
-    background: #9575CD ;
-    color:floralwhite;
+    background: #cee4e3 ;
+    color:#626e6d;
 }
 
 address{
     font-size:80%;
     margin:0px;
-    color:#0f0f0f;
+    color:#626e6d;
 }
 
 .navbar-dark {
-    background-color: #512DA8;
+    background-color: #69b19b;
 }
 
 .page-enter {
